tests/snapshots/langtests__langtests__test_term_display__case_0.snap
---
source: tests/langtests.rs
expression: "case(input, term)"
---
p(Z, h(Z,W), f(W))
-----
p(Z, h(Z, W), f(W))
