tests/snapshots/langtests__langtests__test_term_display__case_2.snap
---
source: tests/langtests.rs
expression: "case(input, err)"
---

-----
error at 1:1: expected one of "#", "%", "/*", [' ' | '\t' | '\r' | '\n'], ['A' ..= 'Z'], ['a' ..= 'z']
