tests/snapshots/langtests__langtests__test_term_display__case_3.snap
---
source: tests/langtests.rs
expression: "case(input, to_display(&term, &symbol_table))"
---
size(Width, Height)
-----
size(Width, Height)
