tests/snapshots/langtests__langtests__test_term_display__case_4.snap
---
source: tests/langtests.rs
expression: "case(input, to_display(&term, &symbol_table))"
---
superConstant
-----
superConstant
