tests/snapshots/langtests__langtests__test_term_display__case_6.snap
---
source: tests/langtests.rs
expression: "case(input, to_display(&term, &symbol_table))"
---
superTerm(SuperVariable)
-----
superTerm(SuperVariable)
